--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myfo",
+  "name": "new-express-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.3",
-    "web3": "^1.7.1"
+    "express": "^4.17.3"
   }
 }
